# mri_segmentation_prostate

./: .gitignore  README.md  dataset.py  eval.py  exploration.ipynb  losses.py  model_BCE_DICE_BDY.pth  model_BCE_DICE_HSDRF.pth  model_BDY_sched.pth  model_hsdrf.pth  mri_image_segmentation.ipynb  mriseg_model.py  mriseg_models.py  prostate_unet.pth  prostatemri_dataset.py  pyproject.toml  train.py  train_scratch.py  train_transfer.py  utils.py  visualization.ipynb
DICE_scores/: scratch_val_DICE_vs_epoch.npy  transfer_val_DICE_vs_epoch.npy
configs/: promise12_mnv3.yaml  promise12_unet.yaml
src/image_seg/: cli.py
src/image_seg/commands/: evaluate.py  train.py  visualize.py
src/image_seg/core/: data.py  losses.py  models.py  utils.py
