[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-seg"
version = "0.1.0"
description = "CLI for binary image segmentation (developed with prostate MRI images as a case study)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Matthew Gerry" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy",
  "matplotlib",
  "pyyaml>=6.0",
  "scipy"
]

[project.optional-dependencies]
promise12 = ["medsegbench>=0.1"]

[project.scripts]
image-seg = "image_seg.cli:main"   # <-- this creates the shell command

[tool.setuptools.packages.find]
where = ["src"]
